@@ -1,5 +1,5 @@
 GSS README -- Important introductory notes.
-Copyright (C) 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010  Simon Josefsson
+Copyright (C) 2003-2011  Simon Josefsson
 See the end for copying conditions.
 
 This directory holds the Generic Security Service Library (GSSLib).
@@ -23,6 +23,9 @@ others, you are invited to join our mailing list help-gss@gnu.org, see
 <http://lists.gnu.org/mailman/listinfo/help-gss>.
 
 For updates to the project, see <http://www.gnu.org/software/gss/>.
+
+For any copyright year range specified as YYYY-ZZZZ in this package
+note that the range specifies every single year in that closed interval.
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
