@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-# Copyright (C) 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Simon Josefsson
+# Copyright (C) 2003-2011 Simon Josefsson
 #
 # This file is part of the Generic Security Service (GSS).
 #
@@ -47,6 +47,6 @@ GDOC_TEXI_PREFIX = texi/
 GDOC_MAN_PREFIX = man/
 GDOC_MAN_EXTRA_ARGS = -module $(PACKAGE) -sourceversion $(VERSION) \
 	-bugsto $(PACKAGE_BUGREPORT) -includefuncprefix -seeinfo $(PACKAGE) \
-	-copyright "2003-2010 Simon Josefsson" \
+	-copyright "2003-2011 Simon Josefsson" \
 	-verbatimcopying -pkg-name "$(PACKAGE_NAME)"
 include $(srcdir)/Makefile.gdoci
