@@ -1,8 +1,10 @@
 GSS NEWS -- History of user-visible changes.                    -*- outline -*-
-Copyright (C) 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010  Simon Josefsson
+Copyright (C) 2003-2011  Simon Josefsson
 See the end for copying conditions.
 
 * Version 1.0.2 (unreleased)
+
+** gss/api.h: Added RFC 5587 const typedefs.
 
 ** i18n: Translations were updated.
 
